# ripgrep-write

./: Cargo.toml  _build.fish  debug.fish  release.fish  test.fish  windows.fish
ci/: test-complete
crates/core/: main.rs  output.rs  search.rs
crates/core/flags/: defs.rs  hiargs.rs  lowargs.rs
crates/core/flags/complete/: rg.zsh
crates/grep/: Cargo.toml
crates/grep/examples/: simplegrep.rs
crates/ignore/src/: walk.rs
crates/printer/: Cargo.toml
crates/printer/src/: cancellable_writer.rs  color.rs  counter.rs  hyperlink.rs  lib.rs  macros.rs  multi_writer.rs  standard.rs  summary.rs  util.rs
crates/searcher/: Cargo.toml
crates/searcher/examples/: search-stdin.rs
crates/searcher/src/: lib.rs  macros.rs
crates/searcher/src/searcher/: core.rs  glue.rs  mmap.rs  mod.rs
tests/: binary.rs  hay.rs  macros.rs  tests.rs  util.rs  write.rs
