[package]
name = "grep-write"
version = "0.3.2"  #:version
authors = ["Isaac Oscar Gariano <IsaacOscar@live.com.au>", "Andrew Gallant <jamslam@gmail.com>"]
description = """
A modified version of the grep crate for use by ripgrep-write.
"""
documentation = "https://docs.rs/grep"
homepage = "https://github.com/IsaacOscar/ripgrep-write/tree/master/crates/grep"
repository = "https://github.com/IsaacOscar/ripgrep-write/tree/master/crates/grep"
readme = "README.md"
keywords = ["regex", "grep", "egrep", "search", "pattern"]
license = "Unlicense OR MIT"
edition = "2021"

[dependencies]
grep-cli = { version = "0.1.11", path = "../cli" }
grep-matcher = { version = "0.1.7", path = "../matcher" }
grep-pcre2 = { version = "0.1.8", path = "../pcre2", optional = true }
grep-printer = { version = "0.2.2", path = "../printer", package = "grep-printer-write" }
grep-regex = { version = "0.1.13", path = "../regex" }
grep-searcher = { version = "0.1.14", path = "../searcher" }

[dev-dependencies]
termcolor = "1.0.4"
walkdir = "2.2.7"

[features]
pcre2 = ["grep-pcre2"]

# These features are DEPRECATED. Runtime dispatch is used for SIMD now.
simd-accel = []
avx-accel = []
